fix alignment

--- a/gatsby-version/src/styles/main.css
+++ b/gatsby-version/src/styles/main.css
@@ -10,7 +10,7 @@ div {
 .building {
   position: relative;
   width: 60vw;
-  margin-left: 20.375vw;
+  margin-left: 20vw;
   z-index: 1;
 }
 
@@ -85,6 +85,7 @@ div {
   left: 29.7vw;
   padding: 0em;
   z-index: 3;
+  transform: translateX(-0.375vw);
 }
 
 #area1 {
@@ -121,7 +122,7 @@ div {
 }
 
 #area4 {
-  top: 89.7vw;
+  top: 89.68vw;
   background-image: url("../../public/images/rooms/mc-room.png");
   background-size: cover;
   transition: all 0.5s ease-in;
